@@ -167,7 +167,7 @@ public class HTMLTextAreaElement extends HTMLElement {
     @JsxSetter
     public void setRows(final String rows) {
         try {
-            final int i = new Float(rows).intValue();
+            final int i = Float.valueOf(rows).intValue();
             if (i < 0) {
                 if (getBrowserVersion().hasFeature(JS_TEXT_AREA_SET_ROWS_NEGATIVE_THROWS_EXCEPTION)) {
                     throw new NumberFormatException("New value for rows '" + rows + "' is smaller than zero.");
